# OpenGGS-2-Rust

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  Dockerfile_old  devcontainer.json
rust-lib/: Cargo.toml
rust_sdl_bridge/: Cargo.toml
rust_sdl_bridge/src/: lib.rs
src/: ANIMATION.cpp  AUDIO.cpp  AUDIO.h  CONTENT_Enemies.h  CONTENT_Gametype_Load.cpp  CONTENT_Player.h  CONTENT_Stages.h  CONTENT_Stages_Load_Write.cpp  CONTENT_Tiles_and_Sprites.h  ENEMIES.cpp  ENEMIES_Collision.cpp  ENEMIES_Draw.cpp  ENEMIES_Move.cpp  GAME_ENVIRONMENT.cpp  GAME_ENVIRONMENT.h  GRAPHICS_Sprites.cpp  GRAPHICS_Sprites_Bullets.cpp  GRAPHICS_Sprites_Draw.cpp  GRAPHICS_Sprites_Move.cpp  GRAPHICS_Tiles_Animations.cpp  GRAPHICS_Tiles_Define.cpp  GRAPHICS_Tiles_Draw.cpp  GRAPHICS_Tiles_Elements.cpp  GRAPHICS_Tiles_Switch_Tile.cpp  INTERFACE.h  INTERFACE_Draw.cpp  LOOPS.h  LOOP_Credits.cpp  LOOP_Editor_Stages.cpp  LOOP_Editor_Stages_Creator.cpp  LOOP_Editor_Stages_Creator_Functions.cpp  LOOP_Editor_Stages_Enemies.cpp  LOOP_Editor_Stages_Interface.cpp  LOOP_Editor_Stages_Set_Elements.cpp  LOOP_Editor_Stages_Sprites.cpp  LOOP_Editor_Stages_Stage_Settings.cpp  LOOP_Editor_Tiles.cpp  LOOP_Gameloop.cpp  LOOP_Gameloop_Splashscreens.cpp  LOOP_Menu.cpp  (+28 more)
